--- a/compound_bow_test_software.ui
+++ b/compound_bow_test_software.ui
@@ -10,6 +10,12 @@
     <height>700</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>700</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Bow Analyzer</string>
   </property>
@@ -26,6 +32,9 @@
     <layout class="QVBoxLayout" name="cam1">
      <item>
       <widget class="QLabel" name="cam1_lbl">
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string/>
        </property>
