--- a/plotter_window.ui
+++ b/plotter_window.ui
@@ -34,7 +34,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="stoppltbtn">
+       <widget class="QPushButton" name="btn_strt">
         <property name="font">
          <font>
           <family>Calibri</family>
@@ -44,7 +44,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Stop</string>
+         <string>Start</string>
         </property>
        </widget>
       </item>
